# HoroscopeBot

./: Dockerfile  README.md  pyproject.toml
data/: answers.json  config.ini
tgtarologistbot/: main.py
tgtarologistbot/src/app/bot/: bot.py
tgtarologistbot/src/app/bot/handlers/: callback.py  reply.py
tgtarologistbot/src/app/bot/modules/: keyboards.py  middlewares.py  states.py
tgtarologistbot/src/app/database/models/: __init__.py  payment.py  user.py
tgtarologistbot/src/core/: __init__.py  config.py  json_answer.py  task_manager.py  utils.py
tgtarologistbot/src/core/logger/: __init__.py  logger_impl.py
tgtarologistbot/src/enums/: __init__.py  payment_buy_option.py  payment_statuses.py  subscription_type.py  user_statuses.py
tgtarologistbot/src/servises/: payment_service.py  user_service.py
tgtarologistbot/src/servises/open_ai/: __init__.py  open_ai_service.py
